--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
       <div class="imagen">
 
-      <img src="assets/img/mapa_entero.jpg">
+      <img src="assets/img/mapa_entero.jpg" style="width:100%;">
 
       </div>
 
@@ -92,7 +92,7 @@
 
             <div class="imagen">
 
-            <img src="assets/img/scatterplot.jpg">
+            <img src="assets/img/scatterplot.jpg" style="width:100%;">
 
           </div>
           <br>
