--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
     <section class="section">
       <div class="container">
-        <div class="row mb-4 align-items-center">
-          <div class="col-md-10" data-aos="fade-up">
+        <div class="row justify-content-center">
+          <div class="col-4" data-aos="fade-up">
             <h1>¿Cuánto cobran los alcaldes y alcaldesas de Castilla y León?</h1>
             <br>
             <p style="font-size: 120%;">Castilla y León está formada por <strong>2.248 municipios</strong>. De hecho, es la región con más municipios de España, seguida por Cataluña (947).
