--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
       <section class="section">
       <div class="container">
-        <div class="row mb-7 align-items-center">
+        <div class="row align-items-center">
           <div class="texto" data-aos="fade-up">
             
             <p>Existen tres tipos de categorías a la hora de clasificar la actividad de los alcaldes y alcaldesas: <strong>sin dedicación</strong>, <strong>dedicación parcial</strong> o <strong>dedicación exclusiva</strong>. Sin embargo, los salarios anuales que perciben pueden variar mucho de un municipio a otro. El número de habitantes de cada población tiene una correlación con el salario, aunque algunas veces no es el caso.</p>
