--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section class="section">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-4" data-aos="fade-up">
+          <div class="col-md-6 offset-md-3" data-aos="fade-up">
             <h1>¿Cuánto cobran los alcaldes y alcaldesas de Castilla y León?</h1>
             <br>
             <p style="font-size: 120%;">Castilla y León está formada por <strong>2.248 municipios</strong>. De hecho, es la región con más municipios de España, seguida por Cataluña (947).
