--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section class="section">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-md-6 offset-md-3" data-aos="fade-up">
+          <div data-aos="fade-up">
             <h1>¿Cuánto cobran los alcaldes y alcaldesas de Castilla y León?</h1>
             <br>
             <p style="font-size: 120%;">Castilla y León está formada por <strong>2.248 municipios</strong>. De hecho, es la región con más municipios de España, seguida por Cataluña (947).
@@ -122,7 +122,7 @@
 
      <section class="section">
       <div class="container">
-        <div class="row mb-7 align-items-center">
+        <div class="align-items-center">
           <div class="texto" data-aos="fade-up">
             
             <p>Existen tres tipos de categorías a la hora de clasificar la actividad de los alcaldes y alcaldesas: sin dedicación, dedicación parcial o dedicación exclusiva. Sin embargo, los salarios anuales que perciben pueden variar mucho de un municipio a otro. El número de habitantes de cada población tiene una correlación con el salario, aunque algunas veces no es el caso.</p>
