--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <section class="section">
       <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-left">
           <div data-aos="fade-up">
             <h1>¿Cuánto cobran los alcaldes y alcaldesas de Castilla y León?</h1>
             <br>
