--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="row justify-content-left">
           <div data-aos="fade-up">
             <h1>De cero a 48.000 euros: quién cobra cuánto en las alcaldías de Castilla y León.</h1>
-            <h2>Explorador de las retribuciones anuales</h2>
+            <h2 style="font-size:90%">Explorador de las retribuciones anuales</h2>
             <br>
             <p>Castilla y León está formada por <strong>2.248 municipios</strong>. De hecho, es la región con más municipios de España, seguida por Cataluña (947).
               Cada uno de estos ayuntamientos cuenta con un alcalde o alcaldesa, cuyo salario queda reflejado cada año en la base de datos del sistema de <a href="https://www.mptfp.gob.es/portal/funcionpublica/funcion-publica/ispa/estadist_ISPA/informac_estad_2019.html">Información Salarial Puestos de la Administración (ISPA)</a>. Los más recientes y que se muestran en este espacio corresponden al ISPA 2020 y son del ejercicio 2019 <a href="https://www.mptfp.gob.es/dam/es/portal/funcionpublica/funcion-publica/ispa/ispa_2020/retrib_2019/retribuciones_alcaldes.xlsx.xlsx">(descarga los datos)</a>.
