--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
 
           <div data-aos="fade-up">
             
+            <p class="nota">Para este trabajo se han utilizado los datos de la IPSA 2020 (ejercicio 2019) que se pueden encontrar <a href="https://www.mptfp.gob.es/portal/funcionpublica/funcion-publica/ispa/estadist_ISPA/informac_estad_2019.html">aquí.
+              Se han analizado y comparado con los datos poblacionales de cada municipio del portal de Datos Abiertos de Castilla y León del año 2020, que se pueden encontrar en el <a href="https://datosabiertos.jcyl.es/web/es/catalogo-datos/buscador-conjuntos-datos.html">portal. También se ha usado como base cartográfica el mapa de regiones municipales disponible en la misma web.</p>
+            
             <p class="final">Creado por Laura Navarro Soler 
               <br>
               Periodista de datos en <a href="https://www.storydata.es/"><strong>Storydata</strong></a>
