--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <br>
             <br>
             <h1 style="font-size: 130%;">Mapa de las retribuciones de los ayuntamientos y del número de habitantes</h1>
-            <p>Cuanto más intenso es el morado, mayor es la retribución. Cuanto más intenso es el azul, mayor és la población</p>
+            <p>Cuanto más intenso es el <span style="background-color: #FEB2BC">rojo</span>, mayor es la retribución. Cuanto más intenso es el <span style="background-color: #B2D0FE">azul</span>, mayor és la población</p>
             <br>
             
           </div>
