--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 
             <p>Otra alcaldía que llama la atención es la de <strong>El Barraco</strong>, que con alrededor de 2.000 habitantes percibe <strong>29.000 euros anuales</strong>; <strong>Hontanares de Eresma</strong>, en cambio, se asemeja en habitantes pero no en salario: <strong>3.321 euros</strong>.</p>
 
-
+            <img src="assets/img/por_provincias.jpg">
+            
             </div>
             </div>
             </div>
